[package]
name = "frustoz"
version = "0.0.1"
authors = ["control9"]

[dependencies]
image = "0.19.0"
num-complex = "0.1.43"
rand = "0.5.1"
hex = "0.3.2"
rayon = "1.0"
num_cpus = "1.8.0"
xml-rs = "0.8.0"
log = { version = "0.4", features = ["release_max_level_info"] }
simplelog = "^0.5.0"
pbr = "1.0.1"
