[package]
name = "frustoz-cli"
version = "0.1.0"
authors = ["control9"]

[profile.release]
debug = 1

[dependencies]
#num-complex = "0.1.43"
#rand = "0.5.1"
rayon = "1.5.1"
num_cpus = "1.8.0"
log = { version = "0.4.14", features = ["release_max_level_info"] }
simplelog = "^0.11.0"
pbr = "1.0.4"
frustoz-core = { version = "0.1.0", path = "../frustoz-core"}
frustoz-io = { version = "0.1.0", path = "../frustoz-io"}