[package]
name = "frustoz-cli"
version = "0.1.1"
authors = ["control9"]

[dependencies]
rayon = "1.10.0"
num_cpus = "1.16.0"
log = { version = "0.4.21", features = ["release_max_level_info"] }
simplelog = "^0.12.2"
pbr = "1.1.1"

indicatif = "=0.17.8"
indicatif-log-bridge = "0.2.2"

frustoz-core = { version = "0.1.1", path = "../frustoz-core"}
frustoz-io = { version = "0.1.1", path = "../frustoz-io"}