[package]
name = "frustoz-cli"
version = "0.1.3"
authors = ["control9"]
edition = "2024"

[features]
default = []
async-rendering = []

[dependencies]
rayon = "^1.12.0"
num_cpus = "^1.17.0"
log = { version = "^0.4.33", features = ["release_max_level_info"] }
simplelog = "^0.12.2"
pbr = "^1.1.1"

indicatif = "^0.18.6"
indicatif-log-bridge = "0.2.3"

frustoz-core = { version = "=0.1.3", path = "../frustoz-core" }
frustoz-io = { version = "=0.1.3", path = "../frustoz-io" }

tokio = { version = "^1.52.3", features = ["full"] }