[package]
name = "frustoz-core"
version = "0.1.1"
authors = ["Aleksei Sukontsev <aleksei.sukontsev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
log = { version = "0.4.21", features = ["release_max_level_info"] }
rayon = "1.10.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
tokio_with_wasm = "0.4.4"
futures = "0.3.30"
web-time = "1.1.0"
image = "0.25.1"
