[package]
name = "frustoz-core"
version = "0.1.3"
authors = ["Aleksei Sukontsev <aleksei.sukontsev@gmail.com>"]
edition = "2024"

[dependencies]
hex = "^0.4.3"
log = { version = "^0.4.33", features = ["release_max_level_info"] }
rayon = "^1.12.0"
rand = "^0.10.1"
tokio_with_wasm = { version = "^0.9.0", features = ["macros", "sync", "time", "rt" ]}
tokio = { version = "^1.52.3" , features = ["macros", "sync", "time", "rt"]}
futures = "^0.3.32"
web-time = "^1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "^0.4.3", features = ["wasm_js"] }
