[package]
name = "frustoz-io"
version = "0.1.2"
authors = ["Aleksei Sukontsev <aleksei.sukontsev@gmail.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4.21", features = ["release_max_level_info"] }
xml-rs = "0.8.25"
image = "0.25.5"
frustoz-core = { version = "0.1.1", path = "../frustoz-core" }
