[package]
name = "frustoz-ui"
version = "0.1.0"
authors = ["Aleksei Sukontsev <aleksei.sukontsev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
simplelog = "^0.5.0"
frustoz-core = { version = "0.1.0", path = "../frustoz-core"}
frustoz-io = { version = "0.1.0", path = "../frustoz-io"}
gtk = {version="^0.6.0", features= ["v3_20"]}
gdk = "^0.10.0"
gio = "0.6.0"
gdk-pixbuf = { version="0.6.0", features = ["dox"] }
glib = "0.7.1"
cairo-rs = "0.6.0"
relm = "^0.16.0"
relm-derive = "^0.16.0"

rayon = "1.0"
num_cpus = "1.8.0"
